// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowHide should render a default show-hide component 1`] = `
<div
  className="button"
>
  Test...
  <div
    aria-hidden={true}
    className="toggle"
    style={Object {}}
  />
  <button
    aria-disabled={false}
    aria-expanded={false}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="text-and-icon"
    >
      <span
        className="text-first"
      >
        Show More
      </span>
      <span
        className="icon"
      >
        <span
          className="icon icon-svg"
        >
          <svg
            aria-hidden="true"
            className="icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 37.7L0 14.2l3.8-3.9L24 30l20.2-19.7 3.8 3.9z"
            />
          </svg>
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`ShowHide should render an animated show-hide component 1`] = `
<div
  className="button"
>
  Test...
  <div
    aria-hidden={true}
    className="toggle"
    style={
      Object {
        "WebkitTransitionDelay": "0.3s",
        "transitionDelay": "0.3s",
      }
    }
  >
    <div
      aria-hidden={false}
      className="rah-static"
      style={
        Object {
          "height": "0",
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        Full Text
      </div>
    </div>
  </div>
  <button
    aria-disabled={false}
    aria-expanded={false}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="text-and-icon"
    >
      <span
        className="text-first"
      >
        Show More
      </span>
      <span
        className="icon"
      >
        <span
          className="icon icon-svg"
        >
          <svg
            aria-hidden="true"
            className="icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 37.7L0 14.2l3.8-3.9L24 30l20.2-19.7 3.8 3.9z"
            />
          </svg>
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`ShowHide should render an initially open show-hide component 1`] = `
<div
  className="button is-open"
>
  <div
    aria-hidden={false}
    className="toggle"
    style={Object {}}
  >
    Full Text
  </div>
  <button
    aria-disabled={false}
    aria-expanded={true}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="text-and-icon"
    >
      <span
        className="text-first"
      >
        Hide
      </span>
      <span
        className="icon"
      >
        <span
          className="icon icon-svg"
        >
          <svg
            aria-hidden="true"
            className="icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 37.7L0 14.2l3.8-3.9L24 30l20.2-19.7 3.8 3.9z"
            />
          </svg>
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`ShowHide should render an open show-hide component when clicked 1`] = `
<div
  className="button is-open"
>
  <div
    aria-hidden={false}
    className="toggle"
    style={Object {}}
  >
    Full Text
  </div>
  <button
    aria-disabled={false}
    aria-expanded={true}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="text-and-icon"
    >
      <span
        className="text-first"
      >
        Hide
      </span>
      <span
        className="icon"
      >
        <span
          className="icon icon-svg"
        >
          <svg
            aria-hidden="true"
            className="icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 37.7L0 14.2l3.8-3.9L24 30l20.2-19.7 3.8 3.9z"
            />
          </svg>
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`ShowHide should set icon prop correctly 1`] = `
<div
  className="button"
>
  Test...
  <div
    aria-hidden={true}
    className="toggle"
    style={Object {}}
  />
  <button
    aria-disabled={false}
    aria-expanded={false}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="text-and-icon"
    >
      <span
        className="text-first"
      >
        Show More
      </span>
      <span
        className="icon"
      >
        <span
          className="icon icon-svg"
        >
          <svg
            aria-hidden="true"
            className="icon is-bidi"
            data-name="Layer 1"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M24 37.7L0 14.2l3.8-3.9L24 30l20.2-19.7 3.8 3.9z"
            />
          </svg>
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`ShowHide should set icon prop correctly with custom icon 1`] = `
<div
  className="button"
>
  Test...
  <div
    aria-hidden={true}
    className="toggle"
    style={Object {}}
  />
  <button
    aria-disabled={false}
    aria-expanded={false}
    className="button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="text-and-icon"
    >
      <span
        className="text-first"
      >
        Show More
      </span>
      <span
        className="icon"
      >
        <span
          className="icon icon-svg"
        >
          <svg
            aria-hidden="true"
            className="icon is-bidi"
            focusable="false"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M36 48L12 24 36 0v48z"
            />
          </svg>
        </span>
      </span>
    </span>
  </button>
</div>
`;
